--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,9 +34,9 @@ dependencies:
   # Supabase
   supabase_flutter: ^2.5.0
   
-  # Firebase
-  firebase_core: ^3.6.0
-  firebase_storage: ^12.3.4
+  # MinIO (S3-compatible storage)
+  minio: ^3.5.8
+  flutter_dotenv: ^5.1.0
   
   # Telegram Mini App
   http: ^1.2.0
@@ -79,7 +79,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env.local
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
